syntax = "proto3";

option java_outer_classname = "SettingsProto";
option java_package = "io.github.depermitto.bullettrain.protos";

enum UnitSystem {
  Metric = 0;
  Imperial = 1;
}

enum Theme {
  FollowSystem = 0;
  Light = 1;
  Dark = 2;
}

message Settings {
  UnitSystem unitSystem = 1;
  Theme theme = 2;
  bool dynamicColor = 3;
  bool trueBlack = 4;
}
